FIX: user avatar no longer gets squished

--- a/app/javascript/mi_locations/stylesheets/header.sass
+++ b/app/javascript/mi_locations/stylesheets/header.sass
@@ -58,7 +58,7 @@
           @applybg-gray-200
 
 .user-actions
-  @apply  px-5 py-5 relative
+  @apply  px-2 py-5 relative
   @screen sm
     @apply py-0 ml-4 px-0 justify-end
 
@@ -84,7 +84,7 @@
 .user-avatar
   @apply h-10 w-10 object-cover rounded-full border-2 border-gray-600 block
   @screen sm
-    @apply h-8 w-8
+    @apply h-8 w-8 block
   @screen xl
     @apply border-gray-300
 
